--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,108 @@
-#Table {
-   border: 1px solid black;
-   width:50%;
-   height: 75%;
-   margin: auto;
+@keyframes  animate{
+	0%{
+		background-color: tomato;
+	}
+	20%{
+		background-color: maroon;
+	}
+	40%{
+		background-color: cyan;
+	}
+	60%{
+		background-color: aqua;
+	}
+	80%{
+		background-color: royalblue;
+	}
+	100%{
+		background-color: maroon;
+	}
 }
 
-table, tr, td, th {
+@keyframes REE{
+	0%{
+		transform: rotate(0deg);
+	}
+	15%{
+		transform: rotate(45deg);		
+	}
+	30%{
+		transform: rotate(90deg);		
+	}
+	45%{
+		transform: rotate(135deg);		
+	}
+	60%{
+		transform: rotate(180deg);		
+	}
+	75%{
+		transform: rotate(225deg);		
+	}
+	90%{
+		transform: rotate(270deg);		
+	}
+	100%{
+		transform: rotate(360deg);		
+	}
+}
+
+#Table {
+   border: 1px solid black;
+   width:30%;
+   height: 75%;
+   margin: auto;
+   margin-top: 0%
+}
+
+table, td{
 	border: 1px solid black;
+	background-color: white;
+}
+
+body {
+	animation: animate 10s infinite;
+}
+
+#Title{
+	text-align: center;
+	margin: auto;
+	margin-bottom: 1%;
+	padding: 1%;
+	border: 2px solid black;
+	background-color: white;
+	width:30%;
+}
+
+#Wow{
+	height:40%;
+	width: 20%;
+	position: absolute;
+	margin-top: -20%;
+	margin-left: 9%;
+	transform: rotate(320deg);
+}
+
+#Much-Wow{
+	height:40%;
+	width: 20%;
+	position: absolute;
+	margin-top: -20%;
+	margin-left: 70%;
+	transform: rotate(35deg);
+}
+
+#REEE{
+	height: 20%;
+	width: 10%;
+	margin-left: 44%;
+	margin-top: 7%;
+	animation: REE 0.3s infinite;
+}
+
+#words{
+	margin-left: 39%;
+	position: absolute;
+	margin-top: -13%;
+	color: darkgreen;
+	font-size: 155%;
 }
